--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "dev:v2": "ts-node src/index-v2.ts",
-    "dev:v3": "ts-node src/index-v3.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "start:v2": "node dist/index-v2.js",
-    "start:v3": "node dist/index-v3.js",
     "watch": "tsc --watch",
     "lint": "eslint src/**/*.ts",
     "test": "node test-broker.js",
@@ -31,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "ads-client": "^2.1.0",
     "aedes": "^0.46.3",
     "better-sqlite3": "^12.4.1",
     "cors": "^2.8.5",
