Enhanced ADS-MQTT Broker: Network Scanner with live progress, hostname resolution, runtime detection, and modern dashboard

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,44 @@
-PORT=8080
+# ADS-MQTT Broker v4.0 Configuration
+
+# ===== MQTT Configuration =====
 MQTT_PORT=1883
 MQTT_HOST=0.0.0.0
-API_HOST=0.0.0.0
-API_PORT=8080
 
-# ADS Configuration
+# ===== REST API Configuration =====
+API_PORT=8080
+API_HOST=0.0.0.0
+
+# ===== Redis Configuration (v4.0 Required) =====
+# Redis server for caching and queues
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# ===== ADS Configuration (Optional - for default connection) =====
+# Leave empty to start without default connection
 ADS_HOST=localhost
 ADS_PORT=48898
 ADS_TARGET_IP=127.0.0.1
 ADS_TARGET_PORT=801
 ADS_SOURCE_PORT=32750
 
-# Environment
+# ===== Performance & Debug =====
+# Enable detailed event logging (development only)
+DEBUG_EVENTS=false
+
+# Node environment
 NODE_ENV=development
+
+# ===== Advanced Configuration =====
+# Cache TTL (seconds)
+CACHE_TTL_VARIABLES=2
+CACHE_TTL_CONNECTIONS=5
+CACHE_TTL_SYMBOLS=30
+
+# Buffer size per variable (number of entries)
+BUFFER_SIZE=10000
+
+# Queue retry settings
+QUEUE_MAX_RETRIES=3
+QUEUE_RETRY_DELAY=1000
