--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "ads-mqtt-broker",
-  "version": "3.0.0",
-  "description": "Production-ready MQTT Broker with ADS Gateway integration, Multi-Connection support, Auto-Discovery, REST API, audit logging and admin dashboard",
+  "name": "mqtt-ads-bridge",
+  "version": "4.0.0",
+  "description": "Production-ready MQTT-ADS Bridge with automatic PLC variable discovery, network scanning, and real-time synchronization",
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
     "dev:v2": "ts-node src/index-v2.ts",
     "dev:v3": "ts-node src/index-v3.ts",
+    "dev:v4": "ts-node src/index-v4.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "start:v2": "node dist/index-v2.js",
     "start:v3": "node dist/index-v3.js",
+    "start:v4": "node dist/index-v4.js",
     "watch": "tsc --watch",
     "lint": "eslint src/**/*.ts",
     "test": "node test-broker.js",
+    "benchmark": "ts-node benchmark-v4.ts",
     "docker:build": "docker build -t ads-mqtt-broker .",
-    "docker:run": "docker run -p 1883:1883 -p 8080:8080 --rm ads-mqtt-broker"
+    "docker:run": "docker run -p 1883:1883 -p 8080:8080 -p 6379:6379 --rm ads-mqtt-broker"
   },
   "keywords": [
     "mqtt",
@@ -25,7 +28,12 @@
     "beckhoff",
     "rest-api",
     "audit-logging",
-    "admin-dashboard"
+    "admin-dashboard",
+    "event-driven",
+    "redis",
+    "websocket",
+    "high-performance",
+    "real-time"
   ],
   "author": "",
   "license": "MIT",
@@ -33,16 +41,25 @@
     "@types/better-sqlite3": "^7.6.13",
     "aedes": "^0.46.3",
     "better-sqlite3": "^12.4.1",
+    "bull": "^4.16.5",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "eventemitter2": "^6.4.9",
     "express": "^4.18.2",
+    "ioredis": "^5.8.2",
     "mqtt": "^5.3.1",
+    "msgpack-lite": "^0.1.26",
+    "socket.io": "^4.8.1",
+    "socket.io-msgpack-parser": "^3.0.2",
     "uuid": "^9.0.1",
     "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^4.28.10",
+    "@types/msgpack-lite": "^0.1.12",
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
